--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "homepage": "https://github.com/mrackoa/backstage-plugin-opsgenie",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mrackoa/backstage-plugin-opsgenie"
+    "url": "https://github.com/mrackoa/backstage-plugin-opsgenie",
+    "directory": "."
   },
   "publishConfig": {
     "access": "public",
@@ -15,8 +16,13 @@
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "frontend-plugin"
+    "role": "frontend-plugin",
+    "pluginId": "opsgenie",
+    "pluginPackages": [
+      "@mrackoa/backstage-plugin-opsgenie"
+    ]
   },
+  "sideEffects": false,
   "scripts": {
     "start": "backstage-cli package start",
     "build": "backstage-cli package build",
